--- a/.github/workflows/compile-mermaid.yml
+++ b/.github/workflows/compile-mermaid.yml
@@ -17,4 +17,8 @@ jobs:
       with:
         inFile: './test-data/diag.mmd'
         outFile: './test-data/diag.svg'
+    - uses: actions/upload-artifact@v1
+        with:
+          name: output
+          path: ./test-data/diag.svg
    
