--- a/.github/workflows/compile-mermaid.yml
+++ b/.github/workflows/compile-mermaid.yml
@@ -1,22 +1,20 @@
-#Copied from https://github.com/neenjaw/compile-mermaid-markdown-action
 name: 'Compile Mermaid in Markdown'
-
 on:
   push:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v2
       with:
         fetch-depth: 2
 
-    - name: compile mermaid
-      uses: 3shape/threeshape.mermaid.diagram.converter@master
+    - uses: 3shape/threeshape.mermaid.diagram.converter@master
       with:
         inFile: './test-data/diag.mmd'
         outFile: './test-data/diag.svg'
+    
     - uses: actions/upload-artifact@v1
       with:
         name: output
